--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,22 +1,15 @@
 @import "tailwindcss";
 
-@layer utilities {
-  .no-scrollbar::-webkit-scrollbar {
+@utility scrollbar-hidden {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+  &::-webkit-scrollbar {
     display: none;
-  }
-
-  .no-scrollbar {
-    -ms-overflow-style: none;
-    scrollbar-width: none;
-  }
-
-  .infinite-animation {
-    animation-iteration-count: infinite;
   }
 }
 
 @layer base {
   body {
-    @apply bg-[#111] font-[Raleway];
+    @apply bg-[#111] font-[Raleway] text-[rgba(255,255,255,0.75)];
   }
 }
